Changelog
=========

2.1-dev0 - (unreleased)
---------------------------

2.0 - (2021-04-02)
---------------------------
* Feature: Add "volto.blocks.fixed.layout" behavior with auto-sync support
  [avoinea]

1.0 - (2021-03-19)
------------------

* Blocks **@layout** endpoint
  [avoinea]